conf/gateway/virtual-films.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: films
spec:
  hosts:
  - films
  http:
  - route:
    - destination:
        host: films
        subset: v1
