conf/gateway/virtual-users.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
  - users
  http:
  - route:
    - destination:
        host: users
        port:
          number: 8030
